--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "jest-playwright-preset": "^1.5.2",
+    "playwright": "^1.10.0",
     "prettier": "^2.2.1",
     "rollup": "^2.38.4",
     "rollup-plugin-typescript2": "^0.30.0",
