fix(pure): polling + map + plugin

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ketch-com/oid-js": "^0.3.6",
     "@ketch-com/resourcename-js": "^0.2.6",
+    "@ketch-sdk/ketch-plugin": "^0.1.0",
     "@ketch-sdk/ketch-web-api": "^0.1.13",
     "loglevel": "^1.7.1"
   },
