--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/ketch-tag.esm.js",
   "jsnext:main": "dist/ketch-tag.esm.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc",
     "test": "jest --runInBand"
   },
   "repository": {
