--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts"
   ],
   "exclude": [
+    "test/**/*.ts",
     "node_modules",
     "**/*.spec.ts"
   ]
