--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "url": "https://github.com/ketch-sdk/ketch-tag/issues"
   },
   "dependencies": {
-    "@ketch-com/oid-js": "^0.3.6",
     "@ketch-com/resourcename-js": "^0.2.6",
     "@ketch-sdk/ketch-plugin": "^0.1.5",
-    "@ketch-sdk/ketch-web-api": "^0.1.31"
+    "@ketch-sdk/ketch-web-api": "^0.1.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -34,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
     "@types/jest": "^26.0.20",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^26.6.3",
