--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ v1-hotfix ]
   pull_request:
-    branches: [ main ]
+    branches: [ v1-hotfix ]
 
 jobs:
   build:
