--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ v1-hotfix ]
+    branches: [ v1 ]
   pull_request:
-    branches: [ v1-hotfix ]
+    branches: [ v1 ]
 
 jobs:
   build:
@@ -15,6 +15,10 @@ jobs:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
     - uses: actions/checkout@v2.3.4
+      with:
+        submodules: true
+        fetch-depth: 0
+        token: ${{ secrets.GH_TOKEN }}
     - uses: actions/cache@v2.1.6
       with:
         path: ~/.npm
