--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-junit": "^14.0.0",
     "loglevel": "^1.8.0",
     "prettier": "^2.7.1",
