--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
+    "@peculiar/webcrypto": "^1.4.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
