--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,16 +15,17 @@
     "noUnusedParameters": true,
     "outDir": "./dist",
     "removeComments": false,
-    "rootDir": "./src",
     "strict": true,
-    "target": "esnext"
+    "target": "es6"
   },
   "include": [
     "src/**/*.ts",
     "test/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
     "**/*.spec.ts"
-  ]
+  ],
+  "paths": {
+    "@ketch-sdk/ketch-plugin": ["node_modules/@ketch-sdk/ketch-plugin/src/index.ts"],
+  }
 }
