--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -15,18 +15,18 @@ jobs:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Setup Winch
-      uses: winchci/setup-winch@v1
-    - name: Setup Node
-      uses: actions/setup-node@v3
-      with:
-        always-auth: true
-        registry-url: https://registry.npmjs.com/
-        scope: ketch-sdk
-        node-version: 16
-        cache: 'npm'
-        token: ${{ secrets.NPM_TOKEN }}
-    - name: Build and Publish
-      run: winch ci
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Winch
+        uses: winchci/setup-winch@v1
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          always-auth: true
+          registry-url: https://registry.npmjs.com/
+          scope: ketch-sdk
+          node-version: 16
+          cache: "npm"
+          token: ${{ secrets.NPM_TOKEN }}
+      - name: Build and Publish
+        run: winch ci
