--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "jsnext:main": "dist/ketch-tag.esm.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "format": "npx prettier --write \"**/*.{ts,tsx,yml,yaml}\""
   },
   "repository": {
     "type": "git",
