--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,21 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+      version-major: ${{ steps.version.outputs.version-major-only }}
+      version-minor: ${{ format('{0}.{1}', steps.version.outputs.version-major-only, steps.version.outputs.version-minor-only) }}
+      version-patch: ${{ format('{0}.{1}.{2}', steps.version.outputs.version-major-only, steps.version.outputs.version-minor-only, steps.version.outputs.version-patch-only) }}
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Winch
-        uses: winchci/setup-winch@v1
+        with:
+          fetch-depth: 0
+      - name: Generate next version
+        id: version
+        uses: conventional-actions/next-version@v1
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -28,5 +38,30 @@ jobs:
           node-version: 16
           cache: "npm"
           token: ${{ secrets.NPM_TOKEN }}
-      - name: Build and Publish
-        run: winch ci
+      - name: Setup Node version
+        uses: conventional-actions/write-version@v1
+        with:
+          output_path: frontend/package.json
+          version: ${{ needs.setup.outputs.version-patch }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Publish
+        if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        run: npm publish --access public
+
+  release:
+    name: Release
+    if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Create Release
+        uses: conventional-actions/create-release@v1
+        with:
+          tag_name: ${{ needs.build.outputs.version }}
+          artifacts: '*'
