--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rollup -c",
     "test": "jest --runInBand",
-    "format": "npx prettier --write \"**/*.{ts,tsx,yml,yaml}\""
+    "format": "npx prettier --write \"**/*.{ts,tsx,yml,yaml}\"",
+    "docs": "npx typedoc --excludeInternal src/pure.ts"
   },
   "repository": {
     "type": "git",
@@ -51,6 +52,7 @@
     "rollup": "^2.78.1",
     "rollup-plugin-typescript2": "^0.33.0",
     "ts-jest": "^28.0.8",
+    "typedoc": "^0.23.15",
     "typescript": "^4.7.4"
   }
 }
