--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Setup Node version
         uses: conventional-actions/write-version@v1
         with:
-          output_path: frontend/package.json
+          output_path: package.json
           version: ${{ format('{0}.{1}.{2}', steps.version.outputs.version-major-only, steps.version.outputs.version-minor-only, steps.version.outputs.version-patch-only) }}
       - name: Install dependencies
         run: npm ci
