--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "declaration": false,
+    "declaration": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSourceMap": true,
     "module": "esnext",
@@ -15,12 +15,14 @@
     "noUnusedParameters": true,
     "outDir": "./dist",
     "removeComments": false,
+    "rootDir": "./src",
     "strict": true,
-    "target": "es6"
+    "target": "esnext"
   },
   "include": ["src/**/*.ts", "test/**/*.ts"],
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"],
   "paths": {
-    "@ketch-sdk/ketch-plugin": ["node_modules/@ketch-sdk/ketch-plugin/src/index.ts"]
+    "@ketch-sdk/ketch-plugin": ["node_modules/@ketch-sdk/ketch-plugin/src/index.ts"],
+    "@ketch-sdk/ketch-web-api": ["node_modules/@ketch-sdk/ketch-web-api/src/index.ts"]
   }
 }
