--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,2 @@
-.editorconfig
-.eslintignore
-.eslintrc.json
-.github
-.idea
-babel.config.js
-jest.config.js
-rollup.config.js
-tsconfig.json
-tsfmt.json
-winch.yml
-test-reports
+!dist/
+!package.json
