--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --runInBand --passWithNoTests",
     "format": "prettier --write \"**/*.{ts,tsx,yml,yaml}\"",
     "format-check": "prettier --check '**/*.ts'",
-    "docs": "typedoc --githubPages true --excludeInternal src/pure.ts"
+    "docs": "typedoc --githubPages true --excludeInternal src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -48,5 +48,8 @@
     "ts-jest": "^29.0.3",
     "typedoc": "^0.23.18",
     "typescript": "^4.8.4"
-  }
+  },
+  "files": [
+    "/dist"
+  ]
 }
