--- a/package.json
+++ b/package.json
@@ -23,26 +23,28 @@
     "url": "https://github.com/ketch-sdk/ketch-tag/issues"
   },
   "devDependencies": {
-    "@ketch-sdk/ketch-types": "^0.3.0",
+    "@ketch-com/future": "^1.0.1",
+    "@ketch-sdk/ketch-types": "^0.4.0",
     "@ketch-sdk/ketch-web-api": "^1.0.5",
     "@types/fetch-mock": "^7.3.5",
     "@types/jest": "^29.2.0",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.2.1",
-    "jest-environment-jsdom": "^29.2.1",
+    "events": "^3.3.0",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^14.0.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
-    "typedoc": "^0.23.18",
+    "typedoc": "^0.23.19",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0"
   },
