--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,16 @@
     "inlineSourceMap": true,
     "module": "ES2015",
     "moduleResolution": "node",
-    "noEmit": true,
+    "noEmit": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "removeComments": false,
-    "rootDir": "./src",
-    "declarationDir": "./lib",
+    "rootDir": ".",
+    "declarationDir": "./dist",
     "strict": true,
     "target": "ES2015"
   },
