--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "ncc build --minify --license licenses.txt src/index.ts",
+    "build": "npm run build:lib && npm run build:web",
+    "build:lib": "ncc build --minify --license licenses.txt src/index.ts",
+    "build:web": "webpack --config webpack.config.js --mode production",
+    "start": "npx webpack serve --devtool eval-source-map --mode development",
     "lint": "eslint src/**/*.ts",
     "test": "jest --runInBand --passWithNoTests",
     "format": "prettier --write \"**/*.{ts,tsx,yml,yaml}\"",
     "format-check": "prettier --check '**/*.ts'",
     "docs": "typedoc --githubPages true --excludeInternal src/index.ts"
+  },
+  "browserslist": {
+    "production": [
+      "> 1%",
+      "not dead"
+    ]
   },
   "repository": {
     "type": "git",
@@ -24,10 +33,11 @@
   },
   "devDependencies": {
     "@ketch-com/future": "^1.0.3",
-    "@ketch-sdk/ketch-types": "^1.0.2",
-    "@ketch-sdk/ketch-web-api": "^1.0.7",
+    "@ketch-sdk/ketch-data-layer": "^0.0.4",
+    "@ketch-sdk/ketch-types": "^1.1.0",
+    "@ketch-sdk/ketch-web-api": "^1.0.8",
     "@types/fetch-mock": "^7.3.5",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.2.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -35,7 +45,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-jest": "^27.1.4",
     "eslint-plugin-prettier": "^4.2.1",
     "events": "^3.3.0",
     "jest": "^29.2.2",
@@ -44,9 +54,17 @@
     "jest-junit": "^14.0.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
     "typedoc": "^0.23.20",
     "typescript": "^4.8.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "process": "^0.11.10",
+    "util": "^0.12.5"
   },
   "files": [
     "./dist/index.js",
