--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "all": "npm run lint && npm run format-check && npm run test && npm run docs && npm run build",
     "build": "npm run build:lib && npm run build:web",
     "build:lib": "ncc build --minify --license licenses.txt src/index.ts",
     "build:web": "webpack --config webpack.config.js --mode production",
@@ -13,7 +14,7 @@
     "test": "jest --runInBand --passWithNoTests",
     "format": "prettier --write \"**/*.{ts,tsx,yml,yaml}\"",
     "format-check": "prettier --check '**/*.ts'",
-    "docs": "typedoc --githubPages true --excludeInternal src/index.ts"
+    "docs": "typedoc --githubPages true --excludeExternals --excludeInternal src/index.ts"
   },
   "browserslist": {
     "production": [
@@ -32,10 +33,10 @@
     "url": "https://github.com/ketch-sdk/ketch-tag/issues"
   },
   "devDependencies": {
-    "@ketch-com/future": "^1.0.3",
-    "@ketch-sdk/ketch-data-layer": "^0.0.4",
-    "@ketch-sdk/ketch-types": "^1.1.3",
-    "@ketch-sdk/ketch-web-api": "^1.0.8",
+    "@ketch-com/future": "^1.0.4",
+    "@ketch-sdk/ketch-data-layer": "^1.0.0",
+    "@ketch-sdk/ketch-types": "^1.1.5",
+    "@ketch-sdk/ketch-web-api": "^1.0.9",
     "@types/fetch-mock": "^7.3.5",
     "@types/jest": "^29.2.3",
     "@types/uuid": "^9.0.0",
