--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ketch-sdk/ketch-data-layer": "^1.1.1",
     "@ketch-sdk/ketch-types": "^1.3.3",
     "@ketch-sdk/ketch-web-api": "^1.2.0",
+    "@types/deep-equal": "^1.0.1",
     "@types/fetch-mock": "^7.3.5",
     "@types/jest": "^29.2.4",
     "@types/uuid": "^9.0.0",
@@ -64,6 +65,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "deep-equal": "^2.1.0",
     "process": "^0.11.10",
     "util": "^0.12.5"
   },
