--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           version: ${{ format('{0}.{1}.{2}', steps.version.outputs.version-major-only, steps.version.outputs.version-minor-only, steps.version.outputs.version-patch-only) }}
       - name: Install dependencies
         run: npm ci
-      - name: Run build
+      - name: Build
         run: npm run all
       - name: Publish
         if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
