--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,8 @@ jobs:
           version: ${{ format('{0}.{1}.{2}', steps.version.outputs.version-major-only, steps.version.outputs.version-minor-only, steps.version.outputs.version-patch-only) }}
       - name: Install dependencies
         run: npm ci
-      - name: Check format
-        run: npm run format-check
-      - name: Check lint
-        run: npm run lint
-      - name: Check test
-        run: npm run test
       - name: Build
-        run: npm run build
+        run: npm run all
       - name: Publish
         if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         run: npm publish --access public
