--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@ketch-com/future": "^1.0.4",
     "@ketch-sdk/ketch-data-layer": "^1.1.1",
+    "@ketch-sdk/ketch-logging": "^0.0.1",
     "@ketch-sdk/ketch-types": "^1.4.0",
     "@ketch-sdk/ketch-web-api": "^1.2.0",
     "@types/deep-equal": "^1.0.1",
