--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ketch TypeScript/JavaScript Web Tag",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "commonjs",
   "scripts": {
     "all": "npm run lint && npm run format-check && npm run test && npm run docs && npm run build",
     "build": "npm run build:lib && npm run build:web",
@@ -33,42 +34,43 @@
     "url": "https://github.com/ketch-sdk/ketch-tag/issues"
   },
   "devDependencies": {
-    "@ketch-com/future": "^1.1.2",
-    "@ketch-sdk/ketch-data-layer": "^1.1.2",
-    "@ketch-sdk/ketch-logging": "^1.0.1",
-    "@ketch-sdk/ketch-types": "^1.4.3",
-    "@ketch-sdk/ketch-web-api": "^1.2.2",
-    "@types/deep-equal": "^1.0.1",
     "@types/fetch-mock": "^7.3.5",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.2.6",
+    "@types/nano-equal": "^2.0.0",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.2.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "events": "^3.3.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^15.0.0",
-    "prettier": "^2.8.1",
-    "ts-jest": "^29.0.3",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
-    "typedoc": "^0.23.23",
+    "typedoc": "^0.23.24",
     "typescript": "^4.9.4",
-    "uuid": "^9.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "deep-equal": "^2.1.0",
+    "@ketch-com/future": "^1.2.2",
+    "@ketch-sdk/ketch-data-layer": "^1.1.6",
+    "@ketch-sdk/ketch-logging": "^1.0.3",
+    "@ketch-sdk/ketch-types": "^1.4.3",
+    "@ketch-sdk/ketch-web-api": "^1.2.4",
     "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "nano-equal": "^2.0.2",
     "process": "^0.11.10",
-    "util": "^0.12.5"
+    "tslib": "^2.4.1",
+    "util": "^0.12.5",
+    "uuid": "^9.0.0"
   },
   "files": [
     "./dist"
