--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.3.5",
-    "@types/jest": "^29.2.6",
+    "@types/jest": "^29.4.0",
     "@types/nano-equal": "^2.0.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
@@ -45,8 +45,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^15.0.0",
     "prettier": "^2.8.3",
@@ -60,10 +60,11 @@
   },
   "dependencies": {
     "@ketch-com/future": "^1.2.3",
-    "@ketch-sdk/ketch-data-layer": "^1.1.7",
+    "@ketch-com/ketch-cache": "^1.0.0",
+    "@ketch-sdk/ketch-data-layer": "^1.1.9",
     "@ketch-sdk/ketch-logging": "^1.0.3",
     "@ketch-sdk/ketch-types": "^1.4.5",
-    "@ketch-sdk/ketch-web-api": "^1.2.4",
+    "@ketch-sdk/ketch-web-api": "^1.2.5",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "nano-equal": "^2.0.2",
