Handles nav for banners (#525)
Signed-off-by: Midnight-Coder <sagar.jhobalia@gmail.com>
Signed-off-by: Sagar Jhobalia <sagar.jhobalia@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "npm run build:lib && npm run build:web",
     "build:lib": "tsc -p .",
     "build:web": "webpack --config webpack.config.js --mode production",
-    "start": "npx webpack serve --devtool eval-source-map --mode development",
+    "start": "npx webpack serve --devtool source-map --mode development",
     "lint": "eslint src/**/*.ts",
-    "test": "jest --runInBand --passWithNoTests",
+    "test": "jest --runInBand",
     "format": "prettier --write \"**/*.{ts,tsx,yml,yaml}\"",
     "format-check": "prettier --check '**/*.ts'",
     "docs": "typedoc --githubPages true --excludeExternals --excludeInternal src/index.ts"
