--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@ketch-com/future": "^1.2.8",
     "@ketch-com/ketch-cache": "^1.0.2",
     "@ketch-com/ketch-cookie": "^1.0.5",
+    "@ketch-com/ketch-proxy": "^1.0.6",
     "@ketch-sdk/ketch-data-layer": "^1.4.0",
     "@ketch-sdk/ketch-logging": "^1.2.1",
     "@ketch-sdk/ketch-web-api": "^1.6.6",
