--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
   },
   "plugins": ["@typescript-eslint/eslint-plugin", "jest"],
   "rules": {
+    "no-case-declarations": "off",
+    "no-disabled-tests": "off",
     "no-empty-function": "off",
     "@typescript-eslint/no-empty-function": "off",
     "valid-jsdoc": "off",
