--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "eslint:recommended",
     "plugin:jest/recommended",
     "plugin:jest/style",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "env": {
     "browser": true,
@@ -21,6 +22,8 @@
   },
   "plugins": ["@typescript-eslint/eslint-plugin", "jest"],
   "rules": {
+    "no-case-declarations": "off",
+    "no-disabled-tests": "off",
     "no-empty-function": "off",
     "@typescript-eslint/no-empty-function": "off",
     "valid-jsdoc": "off",
