--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 name: Build
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
@@ -54,21 +54,3 @@ jobs:
         run: npm ci
       - name: Run all targets
         run: npm run all
-      - name: Publish
-        if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-        run: npm publish --access public
-
-  release:
-    name: Release
-    if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-    needs:
-      - build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: Create Release
-        uses: conventional-actions/create-release@v1
-        with:
-          tag_name: ${{ needs.build.outputs.version }}
-          artifacts: '*'
